openapi / swagger and codebase are starting wto work together. next is to refactor / correct api code / tests
