# openapi.yml
@@ -7,13 +7,9 @@ info:
 
 servers:
   - url: http://localhost:4000
-    description: local dev server. no SSL. You probably can't see this.
+    description: Local dev server. No SSL. You probably can't see this.
   - url: https://e-commerce-rest-api-v2.herokuapp.com
-    description: production server. should provide SSL
-
-schemes:
-  - http
-  - https
+    description: Production server. Should provide SSL.
 
 tags:
 - name: "cart"
@@ -47,34 +43,41 @@ paths:
     post:
       tags: 
       - "cart"
-      summary: "Create a cart"
-      description: "Create a new cart for a user"
-      parameters: []
-      responses:
-        200:
-          description: 200 Success
-        400:
-          description: 400 Bad request
-  /api/v1/cart/{cartID}:
-    get:
-      tags: 
-        - "cart"
-      summary: "Get a cart by id"
-      description: "Get a cart by cart id"
-      parameters: []
-      responses:
-        200:
-          description: 200 Success
-        204:
-          description: 204 No Content
-        400:
-          description: 400 Bad request
-    post:
-      tags: 
-      - "cart"
       summary: "Add item to a cart"
       description: "Add an item to an existing cart"
-      parameters: []
+      parameters:
+        - name: cartID
+          in: header
+          required: true
+          description: Id of cart to add item to.
+          schema:
+            type : integer
+            format: int64
+            minimum: 1
+        - name: product_id
+          in: header
+          required: true
+          description: Id of product to add to cart.
+          schema:
+            type : integer
+            format: int64
+            minimum: 1
+        - name: product_quantity
+          in: header
+          required: true
+          description: How many of item to add to cart.
+          schema:
+            type : integer
+            format: int64
+            minimum: 1
+        - name: product_price
+          in: header
+          required: true
+          description: Individual price of item to add to cart.
+          schema:
+            type : number
+            format: int64
+            minimum: 0.00
       responses:
         200:
           description: 200 Success
@@ -85,7 +88,39 @@ paths:
       - "cart"
       summary: "Update a cart item"
       description: "Update a cart item's quantity and line item price"
-      parameters: []
+      parameters:
+        - name: cartID
+          in: header
+          required: true
+          description: Id of cart that has item to update.
+          schema:
+            type : integer
+            format: int64
+            minimum: 1
+        - name: product_id
+          in: header
+          required: true
+          description: Id of product to update.
+          schema:
+            type : integer
+            format: int64
+            minimum: 1
+        - name: product_quantity
+          in: header
+          required: true
+          description: How many of item to update.
+          schema:
+            type : integer
+            format: int64
+            minimum: 1
+        - name: product_price
+          in: header
+          required: true
+          description: Individual price of item to update.
+          schema:
+            type : number
+            format: int64
+            minimum: 0.00
       responses:
         200:
           description: 200 Success
@@ -98,10 +133,48 @@ paths:
       - "cart"
       summary: "Delete a cart item"
       description: "Delete a cart item"
-      parameters: []
+      parameters:
+        - name: cartID
+          in: header
+          required: true
+          description: Id of cart that has item to delete.
+          schema:
+            type : integer
+            format: int64
+            minimum: 1
+        - name: itemID
+          in: header
+          required: true
+          description: Id of item to delete.
+          schema:
+            type : integer
+            format: int64
+            minimum: 1
       responses:
         200:
           description: 200 Success
+        400:
+          description: 400 Bad request
+  /api/v1/cart/{cartID}:
+    get:
+      tags: 
+        - "cart"
+      summary: "Get a cart by id"
+      description: "Get a cart by cart id"
+      parameters:
+        - name: cartID
+          in: path
+          required: true
+          description: Id of cart to retrieve.
+          schema:
+            type : integer
+            format: int64
+            minimum: 1
+      responses:
+        200:
+          description: 200 Success
+        204:
+          description: 204 No Content
         400:
           description: 400 Bad request
   /api/v1/login:
@@ -111,30 +184,42 @@ paths:
       summary: "Show default page"
       description: "Show login page"
       parameters: []
+      responses:
+        200:
+          description: 200 Success
+        400:
+          description: 400 Bad request
     post:
       tags: 
       - "login"
       summary: "Login"
       description: "Log in a user with provided username/password and auth via passport"
-      parameters: []
+      parameters:
+        - name: username
+          in: header
+          required: true
+          description: Username of attempted login.
+          schema:
+            type : string
+        - name: password
+          in: header
+          required: true
+          description: Password of attempted login.
+          schema:
+            type : string
+      responses:
+        200:
+          description: 200 Success
+        401:
+          description: 401 Not Authorized
+        400:
+          description: 400 Bad request
   /api/v1/order:
     get:
       tags: 
       - "order"
       summary: "Get orders"
       description: "Get all orders in the database"
-      parameters: []
-      responses:
-        200:
-          description: 200 Success
-        400:
-          description: 400 Bad request
-  /api/v1/order/{orderID}:
-    get:
-      tags: 
-      - "order"
-      summary: "Get order by id"
-      description: "Get an order by id"
       parameters: []
       responses:
         200:
@@ -157,7 +242,35 @@ paths:
       - "order"
       summary: "Delete order"
       description: "Delete an order by id"
-      parameters: []
+      parameters:
+        - name: orderID
+          in: header
+          required: true
+          description: Id of order to delete.
+          schema:
+            type : integer
+            format: int64
+            minimum: 1
+      responses:
+        200:
+          description: 200 Success
+        400:
+          description: 400 Bad request
+  /api/v1/order/{orderID}:
+    get:
+      tags: 
+      - "order"
+      summary: "Get order by id"
+      description: "Get an order by id"
+      parameters:
+        - name: orderID
+          in: path
+          required: true
+          description: Id of order to retrieve.
+          schema:
+            type : integer
+            format: int64
+            minimum: 1
       responses:
         200:
           description: 200 Success
@@ -175,24 +288,32 @@ paths:
           description: 200 Success
         400:
           description: 400 Bad request
-  /api/v1/product/{productID}:
-    get:
-      tags: 
-      - "product"
-      summary: "Get product"
-      description: "Get a product by id"
-      parameters: []
-      responses:
-        200:
-          description: 200 Success
-        400:
-          description: 400 Bad request
     post:
       tags: 
       - "product"
       summary: "Add a product"
       description: "Add a product to the database"
-      parameters: []
+      parameters:
+        - name: name
+          in: header
+          required: true
+          description: Name of product to add to database.
+          schema:
+            type : string
+        - name: description
+          in: header
+          required: true
+          description: Description of product to add to database.
+          schema:
+            type : string
+        - name: price
+          in: header
+          required: true
+          description: Individual price of product to add to database..
+          schema:
+            type : number
+            format: int64
+            minimum: 0.00
       responses:
         201:
           description: 201 Created
@@ -203,7 +324,35 @@ paths:
       - "product"
       summary: "Update"
       description: "Update a product's name / description / price"
-      parameters: []
+      parameters:
+        - name: id
+          in: header
+          required: true
+          description: Id of product to update.
+          schema:
+            type : integer
+            format: int64
+            minimum: 1
+        - name: name
+          in: header
+          required: true
+          description: Name of product to update.
+          schema:
+            type : string
+        - name: description
+          in: header
+          required: true
+          description: Description of product to update.
+          schema:
+            type : string
+        - name: price
+          in: header
+          required: true
+          description: Individual price of product to update.
+          schema:
+            type : number
+            format: int64
+            minimum: 0.00
       responses:
         200:
           description: 200 Success
@@ -216,10 +365,38 @@ paths:
       - "product"
       summary: "Delete product"
       description: "Delete product from the database"
-      parameters: []
+      parameters:
+        - name: id
+          in: header
+          required: true
+          description: Id of product to delete from database.
+          schema:
+            type : integer
+            format: int64
+            minimum: 1
       responses:
         204:
           description: 204 No content
+        400:
+          description: 400 Bad request
+  /api/v1/product/{productID}:
+    get:
+      tags: 
+      - "product"
+      summary: "Get product"
+      description: "Get a product by id"
+      parameters:
+        - name: productID
+          in: path
+          required: true
+          description: Id of product to retrieve.
+          schema:
+            type : integer
+            format: int64
+            minimum: 1
+      responses:
+        200:
+          description: 200 Success
         400:
           description: 400 Bad request
   /api/v1/register:
@@ -228,11 +405,21 @@ paths:
       - "register"
       summary: "Get"
       description: "Displays register form page"
+      responses:
+        200:
+          description: 200 Success
+        400:
+          description: 400 Bad request
     post:
       tags: 
       - "register"
       summary: "Add user"
       description: "Adds user to database"
+      responses:
+        200:
+          description: 200 Success
+        400:
+          description: 400 Bad request
   /api/v1/user:
     get:
       tags: 
@@ -252,7 +439,19 @@ paths:
       - "user"
       summary: "Create a user"
       description: "Add a user record to the database"
-      parameters: []
+      parameters:
+        - name: user_name
+          in: header
+          required: true
+          description: User name to add to database.
+          schema:
+            type : string
+        - name: password
+          in: header
+          required: true
+          description: Password to add to database.
+          schema:
+            type : string
       responses:
         201:
           description: 201 Created
@@ -263,7 +462,27 @@ paths:
       - "user"
       summary: "Update a user"
       description: "Update a user record in the database"
-      parameters: []
+      parameters:
+        - name: user_id
+          in: header
+          required: true
+          description: User id to update in database.
+          schema:
+            type : integer
+            format: int64
+            minimum: 1
+        - name: user_name
+          in: header
+          required: true
+          description: User name to update in database.
+          schema:
+            type : string
+        - name: password
+          in: header
+          required: true
+          description: Password to update in database.
+          schema:
+            type : string
       responses:
         200:
           description: 200 Sucess
@@ -276,7 +495,15 @@ paths:
       - "user"
       summary: "Delete a user"
       description: "Delete a user record from the database"
-      parameters: []
+      parameters:
+        - name: userID
+          in: header
+          required: true
+          description: Id of user to delete from database.
+          schema:
+            type: integer
+            format: int64
+            minimum: 1
       responses:
         200:
           description: 200 Sucess
@@ -288,7 +515,15 @@ paths:
       - "user"
       summary: "Get a user"
       description: "Get a user record from the database"
-      parameters: []
+      parameters:
+      - name: userID
+        in: path
+        required: true
+        description: Id of user to retrieve.
+        schema:
+          type : integer
+          format: int64
+          minimum: 1
       responses:
         200:
           description: 200 Success
